# cocoindex

./: .env.example  .gitignore  Brain.md  README.md  _template_repo.py.txt  common.py  pyproject.toml  skills-lock.json
.agents/skills/cocoindex/: SKILL.md
.agents/skills/cocoindex/references/: api_reference.md  connectors.md  patterns.md  setup_database.md  setup_project.md
