[project]
name = "cocoindex-code-embedding-workspace"
version = "0.1.0"
description = "CocoIndex v1 workspace: syntax-aware semantic code index for one or more repos, stored in Postgres/pgvector."
requires-python = ">=3.11"
dependencies = [
    "cocoindex[postgres,sentence_transformers]>=1.0.7",
    "asyncpg>=0.29.0",
    "pgvector>=0.4.1",
    "numpy",
    "python-dotenv>=1.0.1",
]

[tool.setuptools]
py-modules = ["common"]
